# BIGGEngine

./: .gitmodules  CMakeLists.txt  README.md
docs/sphinx/: CreatingAnApplication.html  Installation.html  QuickStart.html  Reasoning.html  Reference.html  genindex.html  index.html  search.html
docs/sphinx/_sources/: AppI.rst.txt  ContextI.rst.txt  ContextImplGLFW.rst.txt  CreatingAnApplication.rst.txt  Installation.rst.txt  QuickStart.rst.txt  Reasoning.rst.txt  Reference.rst.txt  index.rst.txt
docs/sphinx/_static/: bootstrap-sphinx.css  documentation_options.js
docs/sphinx/_static/css/: mytheme.css
res/shaders/: info.txt
scripts/: BIGGEngine.lua  LuaComponents.inl  LuaContextFunctions-inl.hpp  LuaContextFunctions.hpp  LuaContextFunctions.inl  LuaEnums.inl  LuaLog.cpp  LuaLog.hpp  LuaVector-inl.hpp  LuaVector.hpp  LuaVector.inl  LuaVectorHandle.inl
src/: Components.hpp  Config.hpp  Context.cpp  Context.hpp  ContextI.cpp  ContextI.hpp  ContextImplGLFW.cpp  ContextImplGLFW.hpp  Core.hpp  Debug.cpp  Debug.hpp  ECS.hpp  Events.cpp  Events.hpp  Functor.hpp  InputEnums.hpp  Log.hpp  Macros.hpp  NativeWindowHack.hpp  NativeWindowHack.mm  Profile.hpp  RenderStage.hpp  Renderer.cpp  Renderer.hpp  Script.cpp  Script.hpp  main.cpp
src/Render/: RenderBase.cpp  RenderBase.hpp  RenderMeshComponents-inl.hpp  RenderMeshComponents.cpp  RenderMeshComponents.hpp  RenderUI-inl.hpp  RenderUI.cpp  RenderUI.hpp  RenderUtils.cpp  RenderUtils.hpp
test/: main.lua  test.cpp  test2.lua
test/shaders/: compile-shaders.sh  fs_test.sc  vs_test.sc
